# openexp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  backlog.yaml  backlog_cli.py  landing.html  openexp-architecture.html  pyproject.toml  requirements.txt  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  publish-pack.md
.github/workflows/: tests.yml
benchmarks/: README.md  longmemeval_bench.py
docs/: architecture.md  benchmark-results.md  claude-design-brief.md  configuration.md  decision-extraction.md  dogfood-2026-04-26.md  experience-library.md  experiences.md  how-it-works.md  outreach-pitch.md  product-page-content.md  publishing-a-pack.md  redesign-2026-04-26.md  reward-audit-2026-04-08.md  roadmap.md  skill-architecture.md  storage-system.md  user-stories-mcp-tools.md
docs/adr/: 0001-v4-schema-operational-log-and-dependencies.md
experiences/d49e0997/: README.md  SKILL.md  experience.yaml  meta.yaml  steps.indexable.jsonl  (+1 more)
openexp/: __init__.py  __main__.py  cli.py  mcp_server.py  outcome.py  retrospective.py  retrospective_prompts.py  reward_tracker.py  viz.py
prompts/: anonymize.md  extract_experience.md
scripts/: batch_label.py  seed_first_outcome.py
templates/: SKILL.template.md
tests/: test_chunking.py  test_compaction.py  test_experience.py  test_explanation.py  test_filters.py  test_hybrid_search.py  test_outcome.py  test_post_tool_use_hook.sh  test_q_value.py  test_retrospective.py  test_reward_context.py  test_reward_log.py  test_scoring.py  test_session_end.py  test_topic_mapping.py  test_transcript.py  test_viz.py
(+36 files in other folders)
